test/spec_vectors/memory/fail/module_13.wat
(module (func (drop (f32.load (i32.const 0)))))